
Package: PSCBS
==============

Version: 0.39.0 [2013-10-21]
o Now bootstrapping also provides standard deviation summarizes.
o More internal updates on bootstrapping.


Version: 0.38.6 [2013-10-20]
o Internal restructuring on how bootstrapping of segment means is done.
o BUG FIX: plotTracks() for PairedPSCBS would use argument 'Clim'
  for 'Blim' as well, regardless of what argument 'Blim' is.  This
  bug was introduced in v0.38.3.


Version: 0.38.5 [2013-10-18]
o BUG FIX: The CBS and Paired PSCBS report templates assumed that
  the 'R.utils' package is attached.


Version: 0.38.4 [2013-10-15]
o CLEANUP: Removed a few unnecessary NAMESPACE imports.
o Bumped up package dependencies.


Version: 0.38.3 [2013-10-14]
o Now plotTracks() for CBS and PSCBS gives a more informative error if
  'Clim' or 'Blim' is invalid.  If using "auto" (only for CBS) and the
  limits could not be inferred due to an unknown or unset signal type,
  an informative error message reports on this as well.
o Now the package vignettes are in vignettes/ and not in inst/doc/,
  which will not be supported by R (>= 3.1.0).
o ROBUSTNESS: The overriding of append() to become a generic
  function does now call base::append() in the default, instead
  of copy the latter.  All this will eventually be removed,
  when proper support for c, [, [[ etc. has been added everywhere.
o CLEANUP: Now explicitly importing only what is needed in NAMESPACE.


Version: 0.38.2 [2013-10-13]
o BUG FIX: While attaching the package, it could cause a cyclic
  loading of namespaces.


Version: 0.38.1 [2013-10-08]
o Now getSmoothLocusData() for CBS also returns column 'count' which
  specifies the number of (finite) loci averaged over in each bin.
o DOCUMENTATION: Vignette 'Total copy-number segmentation using CBS'
  would display the same plot as vignette 'Parent-specific copy-number
  segmentation using Paired PSCBS'.
o DOCUMENTATION: Renamed vignette 'Paired PSCBS' to 'Parent-specific