@@ -3,6 +3,8 @@ Package: PSCBS
 ==============
 
 Version: 0.39.0 [2013-10-21]
+o Added argument 'subset' to applyByRegion() for PairedPSCBS.
+o Added clearBootstrapSummaries() for PairedPSCBS.
 o Now bootstrapping also provides standard deviation summarizes.
 o More internal updates on bootstrapping.
 
